--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-  <link rel="icon" href="./src/assets/images/saint.jpeg">
+  <link rel="icon" href="/saint.jpeg">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saint Devops</title>
